Fix maximized initial window state behavior on Windows with Java 17
Also correct a typo on the -Xmx JVM arg